--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Keycloak config
-spring.security.oauth2.client.registration.keycloak.client-id=app
+spring.security.oauth2.client.registration.keycloak.client-id=${KEYCLOAK_CLIENT_ID}
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
-spring.security.oauth2.client.registration.keycloak.client-secret=n1A56gis6rtiwhgECDxZpz0HGs6YcM1W
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8100/auth/realms/spring-boot-example
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8100/auth/realms/spring-boot-example
+spring.security.oauth2.client.registration.keycloak.client-secret=${KEYCLOAK_CLIENT_SECRET}
+spring.security.oauth2.client.provider.keycloak.issuer-uri=${KEYCLOAK_URL}/realms/${KEYCLOAK_REALM}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_URL}/realms/${KEYCLOAK_REALM}
